--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: python
 python:
   - "3.6"
 # command to install dependencies
+install:
+  - pip install coveralls coverage
 script:
-  - pytest # or py.test for Python versions 3.5 and below
+  - coverage run pytest # or py.test for Python versions 3.5 and below
+after_success:
+  - coveralls
