--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.6"
 # command to install dependencies
 install:
-  - pip install coveralls coverage
+  - pip install coveralls coverage termcolor
 script:
   - coverage run test_rpn.py # or py.test for Python versions 3.5 and below
 after_success:
